# wordle-groupme-bot-rust

./: .gitignore  Cargo.toml  README.md  wordle_bak.db
migrations/2022-04-04-053136_create_wordle/: down.sql  up.sql
migrations/2022-04-09-190337_wordle/: up.sql
migrations/2022-04-09-202139_wordle/: down.sql  up.sql
src/: actions.rs  main.rs  models.rs  schema.rs
src/db/: schema.rs
