[package]
name = "wordle-groupme-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
lazy_static = "1.4.0"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }