[package]
name = "wordle-groupme-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }